--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,14 @@
+body { background-color: white;
+}
 .App {
   text-align: center;
+  padding: 4rem;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+  
 }
 
 @media (prefers-reduced-motion: no-preference) {
